test/expected/explain_fkr_pi.out
explain int* f(x)
               ^
16: error: type specifier required since C2X
